<resources>

    <string name="app_name">Release Report</string>

    <string name="about">About</string>
    <string name="all">All</string>
    <string name="calendar">Calendar</string>
    <string name="date_select">Select date</string>
    <string name="discover">Discover</string>
    <string name="duration_placeholder">%d min</string>
    <string name="empty">Nothing to see here</string>
    <string name="filter">Filter</string>
    <string name="for_you">For you</string>
    <string name="game">Game</string>
    <string name="games">Games</string>
    <string name="month_previous">Previous month</string>
    <string name="month_next">Next month</string>
    <string name="movie">Movie</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="nothing_found">Nothing reported yet</string>
    <string name="nothing_found_search">Nothing fond. Try another query.</string>
    <string name="notifications">Notifications</string>
    <string name="placeholder">-</string>
    <string name="preferences">Preferences</string>
    <string name="recently">Recently</string>
    <string name="releases">Releases</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_notification_message">%s (and %d more)</string>
    <string name="reminder_time">Time of day</string>
    <string name="reminder_time_desc">Reminders will appear at %s</string>
    <string name="reminder_weekly_notification">This week</string>
    <string name="reminder_weekly_desc">Weekly reminder about upcoming releases</string>
    <string name="reminder_subscriptions_notification">%d new releases for you today</string>
    <string name="reminder_subscriptions_desc">Daily reminder about subscribed releases</string>
    <string name="scroll_to_today">Scroll back</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for releases, artists, &#8230;</string>
    <string name="spotlight">Spotlight</string>
    <string name="subscription">Subscription</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription_added">You will be reminded about this release upon its release date</string>
    <string name="subscription_removed">You will not be reminded about this release anymore</string>
    <string name="this_week">This week</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="unknown_description">No description available yet</string>
    <string name="version_name">Version</string>
    <string name="version_code">Build</string>
    <string name="weekly">Weekly</string>
    <string name="yesterday">Yesterday</string>
    <string name="video_play">Play video</string>
    <string name="web_search">Web search</string>
    <string name="web_open">Open in web</string>
    <string name="info">Info</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>

</resources>