<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/spotlight"
            android:icon="@drawable/ic_spotlight"
            android:title="@string/spotlight" />

        <item
            android:id="@+id/discover"
            android:icon="@drawable/ic_search"
            android:title="@string/discover" />

        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/subscription_list"
            android:icon="@drawable/ic_subscription_on"
            android:title="@string/subscriptions" />

    </group>

    <group
        android:id="@+id/other"
        android:checkableBehavior="single">

        <item
            android:id="@+id/release_list"
            android:title="@string/releases" />

        <item
            android:id="@+id/preferences"
            android:title="@string/preferences" />

    </group>

</menu>