<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/releases">

    <action
        android:id="@+id/open_date"
        app:destination="@+id/releases"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out">
        <argument
            android:name="date"
            app:argType="string"/>
    </action>

    <fragment
        android:id="@+id/spotlight"
        android:name="com.faltenreich.release.ui.fragment.SpotlightFragment"
        android:label="@string/spotlight"
        tools:layout="@layout/fragment_spotlight"/>

    <fragment
        android:id="@+id/releases"
        android:name="com.faltenreich.release.ui.fragment.ReleaseListFragment"
        android:label="@string/releases"
        tools:layout="@layout/fragment_release_list">
        <argument
            android:name="date"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>

    <fragment
        android:id="@+id/calendar"
        android:name="com.faltenreich.release.ui.fragment.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar"/>

</navigation>