<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/toolbar_height">

        <ImageView
            android:id="@+id/spotlightReleaseCoverImageView"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/spotlightReleaseNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:textColor="?android:textColorPrimaryInverse"
            android:maxLines="2"
            android:ellipsize="end"
            android:padding="@dimen/margin_padding_size_medium"
            app:layout_constraintStart_toStartOf="@id/spotlightReleaseCoverImageView"
            app:layout_constraintEnd_toEndOf="@id/spotlightReleaseCoverImageView"
            app:layout_constraintBottom_toBottomOf="@id/spotlightReleaseCoverImageView"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:id="@+id/weekListLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_padding_size_medium"
            android:paddingBottom="@dimen/margin_padding_size_small"
            android:paddingStart="@dimen/margin_padding_size_medium"
            android:paddingEnd="@dimen/margin_padding_size_medium"
            android:text="@string/this_week"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimaryInverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spotlightReleaseCoverImageView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weekListView"
            android:layout_width="0dp"
            android:layout_height="@dimen/spotlight_list_height"
            android:paddingStart="@dimen/margin_padding_size_medium"
            android:paddingEnd="@dimen/margin_padding_size_medium"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weekListLabel"
            tools:listitem="@layout/list_item_spotlight"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:orientation="horizontal"/>

        <include
            layout="@layout/view_empty"
            android:id="@+id/weekEmptyView"
            android:layout_width="0dp"
            android:layout_height="@dimen/spotlight_list_height"
            app:layout_constraintTop_toTopOf="@+id/weekListView"
            app:layout_constraintBottom_toBottomOf="@+id/weekListView"
            app:layout_constraintStart_toStartOf="@id/weekListView"
            app:layout_constraintEnd_toEndOf="@+id/weekListView"/>

        <TextView
            android:id="@+id/favoriteLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_padding_size_medium"
            android:paddingBottom="@dimen/margin_padding_size_small"
            android:paddingStart="@dimen/margin_padding_size_medium"
            android:paddingEnd="@dimen/margin_padding_size_medium"
            android:text="@string/for_you"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimaryInverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weekListView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteListView"
            android:layout_width="0dp"
            android:layout_height="@dimen/spotlight_list_height"
            android:paddingStart="@dimen/margin_padding_size_medium"
            android:paddingEnd="@dimen/margin_padding_size_medium"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteLabel"
            tools:listitem="@layout/list_item_spotlight"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:orientation="horizontal"/>

        <TextView
            android:id="@+id/recentLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_padding_size_medium"
            android:paddingBottom="@dimen/margin_padding_size_small"
            android:paddingStart="@dimen/margin_padding_size_medium"
            android:paddingEnd="@dimen/margin_padding_size_medium"
            android:text="@string/recently"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimaryInverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteListView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentListView"
            android:layout_width="0dp"
            android:layout_height="@dimen/spotlight_list_height"
            android:paddingStart="@dimen/margin_padding_size_medium"
            android:paddingEnd="@dimen/margin_padding_size_medium"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentLabel"
            tools:listitem="@layout/list_item_spotlight"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:orientation="horizontal"/>

        <include
            layout="@layout/view_empty"
            android:id="@+id/recentEmptyView"
            android:layout_width="0dp"
            android:layout_height="@dimen/spotlight_list_height"
            app:layout_constraintTop_toTopOf="@+id/recentListView"
            app:layout_constraintBottom_toBottomOf="@+id/recentListView"
            app:layout_constraintStart_toStartOf="@+id/recentListView"
            app:layout_constraintEnd_toEndOf="@+id/recentListView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>